--- a/src/ui/win.ui
+++ b/src/ui/win.ui
@@ -39,53 +39,52 @@
                             <property name="hexpand">true</property>
                             <property name="vexpand">true</property>
                             <child>
-                              <object class="GtkScrolledWindow" id="text_scrolled_win">
-                                <style>
-                                  <class name="border-right" />
-                                </style>
-                                <property name="name">text</property>
-                                <property name="propagate-natural-height">true</property>
-                                <property name="propagate-natural-width">true</property>
-                                <property name="hexpand">true</property>
-                                <property name="vexpand">true</property>
-                                <property name="child">
-                                  <object class="GtkSourceView" id="source_view_text">
-                                    <property name="monospace">true</property>
-                                    <property name="auto-indent">true</property>
-                                    <property name="indent-on-tab">true</property>
-                                    <property name="highlight-current-line">true</property>
-                                    <property name="indent-width">2</property>
-                                    <property name="insert-spaces-instead-of-tabs">true</property>
-                                    <property name="show-line-marks">true</property>
-                                    <property name="show-line-numbers">true</property>
-                                    <property name="smart-backspace">true</property>
-                                    <property name="tab-width">2</property>
-                                    <property name="wrap-mode">word</property>
+                              <object class="GtkPaned">
+                                <property name="start-child">
+                                  <object class="GtkScrolledWindow" id="text_scrolled_win">
+                                    <property name="name">text</property>
+                                    <property name="propagate-natural-height">true</property>
+                                    <property name="propagate-natural-width">true</property>
+                                    <property name="hexpand">true</property>
+                                    <property name="vexpand">true</property>
+                                    <property name="child">
+                                      <object class="GtkSourceView" id="source_view_text">
+                                        <property name="monospace">true</property>
+                                        <property name="auto-indent">true</property>
+                                        <property name="indent-on-tab">true</property>
+                                        <property name="indent-width">2</property>
+                                        <property name="insert-spaces-instead-of-tabs">true</property>
+                                        <property name="show-line-marks">true</property>
+                                        <property name="show-line-numbers">true</property>
+                                        <property name="smart-backspace">true</property>
+                                        <property name="tab-width">2</property>
+                                        <property name="wrap-mode">word</property>
+                                      </object>
+                                    </property>
                                   </object>
                                 </property>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkScrolledWindow" id="encoding_scrolled_win">
-                                <property name="name">encoding</property>
-                                <property name="propagate-natural-height">true</property>
-                                <property name="propagate-natural-width">true</property>
-                                <property name="hexpand">true</property>
-                                <property name="vexpand">true</property>
-                                <property name="child">
-                                  <object class="GtkSourceView" id="source_view_encoding">
-                                    <property name="monospace">true</property>
-                                    <property name="auto-indent">true</property>
-                                    <property name="highlight-current-line">true</property>
-                                    <property name="indent-on-tab">true</property>
-                                    <property name="indent-width">2</property>
-                                    <property name="insert-spaces-instead-of-tabs">true</property>
-                                    <property name="show-line-marks">true</property>
-                                    <property name="show-line-numbers">true</property>
-                                    <property name="smart-backspace">true</property>
-                                    <property name="tab-width">2</property>
-                                    <property name="wrap-mode">word</property>
-                                    <property name="editable">false</property>
+                                <property name="end-child">
+                                  <object class="GtkScrolledWindow" id="encoding_scrolled_win">
+                                    <property name="name">encoding</property>
+                                    <property name="propagate-natural-height">true</property>
+                                    <property name="propagate-natural-width">true</property>
+                                    <property name="hexpand">true</property>
+                                    <property name="vexpand">true</property>
+                                    <property name="child">
+                                      <object class="GtkSourceView" id="source_view_encoding">
+                                        <property name="monospace">true</property>
+                                        <property name="auto-indent">true</property>
+                                        <property name="indent-on-tab">true</property>
+                                        <property name="indent-width">2</property>
+                                        <property name="insert-spaces-instead-of-tabs">true</property>
+                                        <property name="show-line-marks">true</property>
+                                        <property name="show-line-numbers">true</property>
+                                        <property name="smart-backspace">true</property>
+                                        <property name="tab-width">2</property>
+                                        <property name="wrap-mode">word</property>
+                                        <property name="editable">false</property>
+                                      </object>
+                                    </property>
                                   </object>
                                 </property>
                               </object>
