--- a/src/ui/win.ui
+++ b/src/ui/win.ui
@@ -69,24 +69,12 @@
                                     </child>
                                     <property name="content">
                                       <object class="GtkScrolledWindow" id="text_scrolled_win">
-                                        <property name="name">text</property>
                                         <property name="propagate-natural-height">true</property>
                                         <property name="propagate-natural-width">true</property>
                                         <property name="hexpand">true</property>
                                         <property name="vexpand">true</property>
                                         <property name="child">
-                                          <object class="GtkSourceView" id="source_view_text">
-                                            <property name="monospace">true</property>
-                                            <property name="auto-indent">true</property>
-                                            <property name="indent-on-tab">true</property>
-                                            <property name="indent-width">2</property>
-                                            <property name="insert-spaces-instead-of-tabs">true</property>
-                                            <property name="show-line-marks">true</property>
-                                            <property name="show-line-numbers">true</property>
-                                            <property name="smart-backspace">true</property>
-                                            <property name="tab-width">2</property>
-                                            <property name="wrap-mode">word</property>
-                                          </object>
+                                          <object class="SourceView" id="source_view_text" />
                                         </property>
                                       </object>
                                     </property>
@@ -146,23 +134,12 @@
                                     </child>
                                     <property name="content">
                                       <object class="GtkScrolledWindow" id="encoding_scrolled_win">
-                                        <property name="name">encoding</property>
                                         <property name="propagate-natural-height">true</property>
                                         <property name="propagate-natural-width">true</property>
                                         <property name="hexpand">true</property>
                                         <property name="vexpand">true</property>
                                         <property name="child">
-                                          <object class="GtkSourceView" id="source_view_encoding">
-                                            <property name="monospace">true</property>
-                                            <property name="auto-indent">true</property>
-                                            <property name="indent-on-tab">true</property>
-                                            <property name="indent-width">2</property>
-                                            <property name="insert-spaces-instead-of-tabs">true</property>
-                                            <property name="show-line-marks">true</property>
-                                            <property name="show-line-numbers">true</property>
-                                            <property name="smart-backspace">true</property>
-                                            <property name="tab-width">2</property>
-                                            <property name="wrap-mode">word</property>
+                                          <object class="SourceView" id="source_view_encoding">
                                             <property name="editable">false</property>
                                           </object>
                                         </property>
